--- a/Day 1/style.css
+++ b/Day 1/style.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: rgb(198, 198, 198);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .navbar {
@@ -42,4 +44,48 @@ body {
     width: 90%;
     max-width: 1000px;
     margin: 30px;
+    grid-template-columns: 200px 1fr 220px;
+    gap: 20px;
+}
+
+.player-panel{
+    background:white;
+    padding: 20px;
+    border-radius: 12px;
+}
+
+.player{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.player-color{
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    margin-right: 10px;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.red{
+    background-color: red;
+}
+
+.yellow{
+    background-color: yellow;
+}
+
+.board-section{
+    background-color: white;
+    border-radius: 12px;
+    padding: 20px;
+}
+
+.instructions{
+    background-color: white;
+    border-radius: 12px;
+    padding: 20px;
 }
