--- a/Day 1/style.css
+++ b/Day 1/style.css
@@ -43,7 +43,7 @@ body {
     display: grid;
     width: 90%;
     max-width: 1000px;
-    margin: 30px;
+    margin: 30px auto;
     grid-template-columns: 200px 1fr 220px;
     gap: 20px;
 }
@@ -65,9 +65,7 @@ body {
     height: 25px;
     border-radius: 50%;
     margin-right: 10px;
-    border-color: black;
-    border-style: solid;
-    border-width: 1px;
+    border: 1px solid black;
 }
 
 .red{
@@ -82,6 +80,67 @@ body {
     background-color: white;
     border-radius: 12px;
     padding: 20px;
+    text-align: center;
+}
+
+.status-box{
+    background-color: rgb(210, 207, 207);
+    border: 2px solid #d6d6d6;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.board{
+    width: fit-content;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(7, 60px);
+    grid-template-rows: repeat(6, 60px);
+    gap: 5px;
+    background: rgb(45, 80, 164);
+}
+
+.cell{
+    width: 60px;
+    height: 60px;
+    background-color: white;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: 0.15s;
+}
+
+.cell:hover{
+    transform: scale(1.1);
+}
+
+.cell.red{
+    background-color: red !important;
+}
+
+.cell.yellow{
+    background-color: yellow !important;
+}
+
+.buttons{
+    margin-top: 20px;
+}
+
+button{
+    background-color: rgb(6,6,123);
+    color: white;
+    border: none;
+    padding: 10px 18px;
+    margin: 5px;
+    font-size: 15px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+button:hover{
+    background-color: rgb(45, 80, 164);
 }
 
 .instructions{
